--- a/path_following_controllers/package.xml
+++ b/path_following_controllers/package.xml
@@ -21,6 +21,7 @@
   <depend>controller_interface</depend>
   <depend>control_msgs</depend>
   <depend>control_toolbox</depend>
+  <depend>eigen</depend>
   <depend>generate_parameter_library</depend>
   <depend>hardware_interface</depend>
   <depend>rclcpp</depend>
